# ESP-Pocket2

./: README.md
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/: CMakeLists.txt  Makefile  project.txt  sdkconfig.old
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/BM8563/: CMakeLists.txt
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/BM8563/examples/BM8563_Get/: BM8563_Get.ino
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/BM8563/examples/BM8563_I2CSCan/: BM8563_I2CScan.ino
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/BM8563/examples/BM8563_SET/: BM8563_SET.ino
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/BM8563/examples/BM8563_SET_NTP/: BM8563_SET_NTP.ino
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/BM8563/examples/BM8563_WakeUp/: BM8563_WakeUp.ino
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/BM8563/src/: bm8563.cpp  bm8563.hpp
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/DRV2605/: CMakeLists.txt
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/DRV2605/src/: drv2605.cpp  drv2605.hpp
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/JY901B/: CMakeLists.txt
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/lvgl/: CMakeLists.txt  Kconfig
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/lvgl/include/: lv_conf.h  lv_demo_conf.h  lv_lib_100ask_conf.h
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/lvgl/lv_lib_100ask/: CMakeLists.txt  lv_lib_100ask.h
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/lvgl/lv_lib_100ask/test/lv_100ask_2048_test/: simple_test.c
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/lvgl/lv_lib_100ask/test/lv_100ask_calc_test/: simple_test.c
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/lvgl/lv_lib_100ask/test/lv_100ask_page_manager_test/: simple_test.c
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/lvgl/lv_port/: lv_port.c  lv_port.h
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/components/lvgl/lvgl/: component.mk  lvgl.h
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/main/: CMakeLists.txt  main.cpp
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/main/include/i2c_peripheral/: i2c_app.hpp  i2c_peripheral_task.hpp  i2c_port.h
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/main/include/lv_assets/: lv_ui_assets.h
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/main/include/lv_dependent/: lv_ui.h  lv_ui_app.hpp  lv_ui_helpers.h  lv_ui_task.hpp
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/main/include/uart_peripheral/: uart_app.h  uart_peripheral_task.h
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/main/src/i2c_peripheral/: i2c_app.cpp  i2c_peripheral_task.cpp  i2c_port.c
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/main/src/lv_assets/fonts/: lv_font_Number.c  ui_font_Big.c  ui_font_Medium.c  ui_font_Number.c  ui_font_Small.c
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/main/src/lv_assets/png/: ui_img_battery_bg_png.c  ui_img_icn_charge_png.c  ui_img_particle_1_png.c  ui_img_particle_2_png.c  ui_img_particle_3_png.c  ui_img_water_1_png.c  ui_img_water_2_png.c
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/main/src/lv_dependent/: lv_ui.c  lv_ui_app.cpp  lv_ui_helpers.c
software/ESP-IDF5.0/ST7789_GT911_LVGL_8.3.5_666/main/src/uart_peripheral/: uart_app.c  uart_peripheral_task.c
software/ESP-IDF5.0/max31856_LVGL/: CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
software/ESP-IDF5.0/max31856_LVGL/components/lvgl/: CMakeLists.txt  Kconfig.projbuild
software/ESP-IDF5.0/max31856_LVGL/components/lvgl/include/: lv_demo_conf.h
software/ESP-IDF5.0/max31856_LVGL/components/lvgl/lv_port/: lv_port.h
software/ESP-IDF5.0/max31856_LVGL/components/lvgl/lvgl/: Kconfig  lv_conf_template.h  lvgl.mk
software/ESP-IDF5.0/max31856_LVGL/components/max31856/: CMakeLists.txt  Kconfig.projbuild
software/ESP-IDF5.0/max31856_LVGL/components/max31856/src/: max31856.c  max31856.h
software/ESP-IDF5.0/max31856_LVGL/main/: CMakeLists.txt  filelist.txt  main.cpp  max31856_task.c  max31856_task.h
software/ESP-IDF5.0/max31856_LVGL/main/include/i2c_peripheral/: i2c_app.hpp  i2c_peripheral_task.hpp
software/ESP-IDF5.0/max31856_LVGL/main/include/lv_dependent/: lv_ui_app.hpp  lv_ui_task.hpp
software/ESP-IDF5.0/max31856_LVGL/main/src/i2c_peripheral/: i2c_app.cpp  i2c_peripheral_task.cpp
software/ESP-IDF5.0/max31856_LVGL/main/src/lv_dependent/: lv_ui_app.cpp  lv_ui_task.cpp
software/ESP-IDF5.0/max31856_LVGL/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
software/ESP-IDF5.0/max31856_LVGL/main/ui/fonts/: ui_font_DigitalFont22b1.c  ui_font_DigitalFont30b1.c
software/ESP-IDF5.0/max31856_LVGL/main/ui/images/: ui_img_99_png.c
software/ESP-IDF5.0/max31856_LVGL/main/ui/screens/: ui_HomePage.c  ui_StartPage.c
(+15 files in other folders)
